[metadata]
name = diffusion_mnist
version = 0.1.0
author = yukoga
license = Apache-2.0

[options]
packages = find:
install_requires =
    numpy
    torch
    torchvision
    matplotlib

[options.extras_require]
test =
    pytest

[tool.pytest.ini_options]
pythonpath = "diffusion_mnist"
testpaths = ["tests"]
